[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.4.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target = "wasi:http/proxy@0.1.0"

[package.metadata.component.dependencies]
app = "wasmday:svelte-demo@0.1.0"
